# python-ingest

./: Makefile  pyproject.toml
src/ingest/: __init__.py  attempt_one.py  organise.py  tactic.py
